--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 /* base styles (mobile) */
 
 html{
- margin: 0px;  
-    padding: 0px;
+
 }
 
 body{	
@@ -11,19 +10,12 @@ body{
 	background-color:#1A1A1A;
 	color: #eee;
 	font-size:120%;
-	line-height: 1.35;
     margin: 0px;
     padding:0px;
-
-    
-    border: solid #eee 10px;
-    border-top-width: 0px;
-    border-bottom-width: 0px;
-
 }	
 
 #c {
-    position:absolute;
+    position:fixed;
     width:100%;
     height:100%;
     top:0px;
@@ -36,8 +28,14 @@ body{
 }
 
 .container {
+    
+    border: solid #eee 10px;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
 	margin: 0 auto;
-	width: 100%;
+    min-height: 100%
+    
+
 }
 
 .content {
@@ -56,7 +54,7 @@ body{
 h1{
 	font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
 	font-weight:100;
-	font-size:80px;
+	font-size:72px;
 	color:#eee;
     margin-top: 0;
 	margin-bottom:15px;
@@ -73,13 +71,24 @@ h2{
     text-align: center;
 }
 
+.foot{
+        font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
+	font-weight:100;
+	font-size:16px;
+	color:#eee;
+    margin-top: 20px;
+	padding-bottom:15px;
+    text-align: center;
+}
+
+
 table{
 
 	border-collapse:collapse;
      margin-left:auto; 
     margin-right:auto;
     width: 70%;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
    
 }
 
