--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ html{
 body{	
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
-	background-color:#1A1A1A;
+	background-color:#391919;
 	color: #eee;
 	font-size:120%;
     margin: 0px;
@@ -23,7 +23,7 @@ body{
     left:0px;
     right:0px;
     overflow:hidden;
-    background-color:#1A1A1A;
+    background-color:#391919;
     z-index: -5;
 }
 
