--- a/main.css
+++ b/main.css
@@ -1,47 +1,101 @@
 /* base styles (mobile) */
 
-html{
+html {}
 
+body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+    background-color: #000;
+    color: #eee;
+    font-size: 120%;
+    margin: 0px;
+    padding: 0px;
 }
 
-body{	
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-    font-weight: 300;
-	background-color:#391919;
-	color: #eee;
-	font-size:120%;
-    margin: 0px;
-    padding:0px;
-}	
-
 #c {
-    position:fixed;
-    width:100%;
-    height:100%;
-    top:0px;
-    bottom:0px;
-    left:0px;
-    right:0px;
-    overflow:hidden;
-    background-color:#391919;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    overflow: hidden;
+    background-color: #000;
     z-index: -5;
 }
 
 .container {
-    
     border: solid #eee 10px;
     border-top-width: 0px;
     border-bottom-width: 0px;
-	margin: 0 auto;
+    margin: 0 auto;
     min-height: 100%
-    
+}
 
+table {
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    margin-bottom: 10px;
+}
+
+table tr td {
+    border-collapse: collapse;
+    margin: 0px;
+    padding: 10px;
+}
+
+table.playlists {
+    width: 99%;
+    text-align: center;
+}
+
+table.playlists tr td {
+    margin: 20px;
+    width: 30.33%;
+}
+
+table.playlists tr td div.col1 {
+    background-color: rgba(80, 50, 50, 0.8);
+}
+
+table.playlists tr td div.col2 {
+    background-color: rgba(50, 80, 50, 0.8);
+}
+
+table.playlists tr td div.col3 {
+    background-color: rgba(50, 50, 80, 0.8);
+}
+
+table.playlists tr td div {
+    padding-bottom: 14px;
+}
+
+table.playlists tr td ul {
+    display: block;
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+a {
+    color: #68f;
+    text-decoration: none;
+}
+
+table.playlists tr td ul a {
+    font-size: 18px;
+    display: block;
+    padding: 6px;
 }
 
 .content {
-	margin: 0 auto;
-	width:90%;
+    margin: 0 auto;
+    width: 100%;
 }
+
 @font-face {
     font-family: 'Lato';
     /*note, you are also supposed to include the ttf
@@ -51,93 +105,99 @@ body{
     font-style: normal;
 }
 
-h1{
-	font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
-	font-weight:100;
-	font-size:72px;
-	color:#eee;
-    margin-top: 0;
-	margin-bottom:15px;
-    text-align: center;
-}
-
-h2{
+h1 {
     font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
-	font-weight:100;
-	font-size:24px;
-	color:#eee;
+    font-weight: 100;
+    font-size: 72px;
+    color: #eee;
     margin-top: 0;
-	margin-bottom:15px;
+    margin-bottom: 15px;
     text-align: center;
 }
 
-.foot{
-        font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
-	font-weight:100;
-	font-size:16px;
-	color:#eee;
+h2 {
+    font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
+    font-weight: 100;
+    font-size: 24px;
+    color: #eee;
+    margin-top: 0;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+h3 {
+    font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
+    height: 50px;
+    line-height: 50px;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+
+.foot {
+    font-family: 'HelveticaNeue-UltraLight', 'Lato', sans-serif;
+    font-weight: 100;
+    font-size: 16px;
+    color: #eee;
     margin-top: 20px;
-	padding-bottom:15px;
+    padding-bottom: 15px;
     text-align: center;
 }
 
-
-table{
-
-	border-collapse:collapse;
-     margin-left:auto; 
-    margin-right:auto;
-    width: 70%;
-    margin-bottom: 10px;
-   
-}
-
-table tr td{
-	border-collapse:collapse; 
-	margin:0px;
-     padding: 10px;
-	-webkit-transition: background-color 100ms linear;
-    -moz-transition: background-color 100ms linear;
-    -o-transition: background-color 100ms linear;
-    -ms-transition: background-color 100ms linear;
-    transition: background-color 100ms linear;
-    text-align: center
-}
-
-img.screenshot{
-    
+img.screenshot {
     border: solid 12px #000;
     border-radius: 20px;
     border-top-width: 25px;
     border-bottom-width: 25px;
-    
     width: 90%;
     height: auto;
 }
 
-.link{
-  width: 270px;
-  height: 80px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.link img{
+.link {
     width: 270px;
-height: 80px;
+    height: 80px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#copyright{
-	font-size:50%;
+.link img {
+    width: 270px;
+    height: 80px;
 }
+
+.link2 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 135px;
+    height: 40px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.link2 img {
+    width: 135px;
+    height: 40px;
+}
+
+#copyright {
+    font-size: 50%;
+}
+
 
 /* responsive adjustments */
-@media only screen and (min-width: 900px) {
 
-	.content { 
-		margin: 0 auto;
-		width: 800px; 
-	}
+@media only screen and (max-width: 900px) {
+    .content {
+        margin: 0 auto;
+        width: 850px;
+    }
+}
 
+@media only screen and (min-width: 899px) {
+    .content {
+        margin: 0 auto;
+        width: 850px;
+    }
 }
