--- a/main.css
+++ b/main.css
@@ -30,7 +30,8 @@ body {
     border-top-width: 0px;
     border-bottom-width: 0px;
     margin: 0 auto;
-    min-height: 100%
+    min-height: 100%;
+    min-width: 900px;
 }
 
 table {
